# pydantic-ai-harness

./: .gitignore  AGENTS.md  DYNAMIC_WORKFLOW_DECISIONS.md  Makefile  PLAN.md  README.md  demo_code_mode.py  pyproject.toml  uv.toml
.agents/agents/: docs-parity-reviewer.md
.github/plan-debate/: ci-plan-debate.mjs  web-search.mjs
.github/workflows/: benchmark-live.yml  benchmark-smoke.yml  main.yml  plan-debate.yml
agent_docs/: capability-authoring.md  code-puppy-learnings.md  contract-decisions.md  index.md  openai-agents-docker-learnings.md  review-checklist.md  testing-capabilities.md
benchmarks/codemode/: README.md  bench.py  scenarios.py  setup_env.sh
benchmarks/terminal_bench/: .gitignore  README.md  pyproject.toml
benchmarks/terminal_bench/scripts/: run_full.sh  run_slice.sh
benchmarks/terminal_bench/src/pydantic_ai_harness_terminal_bench/: __init__.py  agent.py  config.py  harbor_agent.py  live.py  observability.py  prompts.py  smoke.py  tools.py
benchmarks/terminal_bench/tasks/smoke-hello/: instruction.md  task.toml
benchmarks/terminal_bench/tasks/smoke-hello/environment/: Dockerfile
benchmarks/terminal_bench/tasks/smoke-hello/solution/: solve.sh
benchmarks/terminal_bench/tasks/smoke-hello/tests/: test.sh
benchmarks/terminal_bench/tests/: conftest.py  test_agent.py  test_config.py  test_harbor_agent.py  test_live.py  test_observability.py  test_smoke.py  test_tools.py
docs/: acp.md  budget-disclosure.md  checkpoints.md  code-mode.md  compaction.md  context.md  cross-model-label.md  dynamic-workflow.md  exa-search.md  filesystem.md  guardrails.md  index.md  localstack.md  loop-detection.md  media.md  memory.md  modal-sandbox.md  mutation-testing.md  nav.json  overflowing-tool-output.md  permission-policy.md  planning.md  primitives-architecture.md  pydantic-ai-docs.md  runtime-authoring.md  staleness.md  step-persistence.md  subagents.md  youdotcom.md
docs/capabilities/: code-mode.md  filesystem.md  managed-prompt.md  shell.md
docs/experimental/: authoring.md  compaction.md  confined-authoring.md  confined_authoring.md  context.md  docs.md  overflow.md  planning.md  step-persistence.md  subagents.md
examples/: README.md  cli.py  dynamic_workflow.py  dynamic_workflow_audit.py  dynamic_workflow_fork_and_resume.py  dynamic_workflow_migrate.py  dynamic_workflow_speculative_repair.py
examples/coding_harness/: README.md  __init__.py  __main__.py  agent.py  demo.py  test_scenarios.py
examples/guardrails/: async_tripwire.py  cost_budget.py  prompt_injection.py  secret_leakage.py  tool_approval.py
examples/memory/: coding_assistant.py  personal_assistant.py  study_coach.py
integration_tests/localstack/: test_live_localstack.py
pydantic_ai_harness/: __init__.py  _monty_exec.py  _tool_output.py
pydantic_ai_harness/acp/: CONFORMANCE.md  README.md  __init__.py  _adapter.py  _content.py  _native.py  _permission.py  _present.py  _serialize.py  _server.py  _session.py  _store.py
pydantic_ai_harness/background_tools/: README.md  _capability.py
pydantic_ai_harness/budget_disclosure/: README.md  __init__.py  _capability.py
pydantic_ai_harness/cache_stability/: README.md  _capability.py
pydantic_ai_harness/checkpoints/: README.md  __init__.py  _capability.py  _toolset.py
pydantic_ai_harness/code_mode/: README.md  __init__.py  _capability.py  _toolset.py  temporal.py
pydantic_ai_harness/code_mode_dynamic_catalog/: README.md  __init__.py  _capability.py
pydantic_ai_harness/compaction/: README.md  __init__.py  _capability.py  _clamp_oversized_messages.py  _clear_tool_results.py  _deduplicate_file_reads.py  _limit_warner.py  _receipts.py  _shared.py  _sliding_window.py  _summarizing_compaction.py  _tiered_compaction.py
pydantic_ai_harness/context/: README.md  __init__.py  _capability.py  (+2 more)
pydantic_harness/: __init__.py
scripts/: run-mutmut.sh
tests/: _acp_clients.py  conftest.py  test_approval.py  test_compaction.py  test_doc_snippets.py  test_docs_parity.py  test_filesystem.py  test_memory.py  test_monty_runtime_pairing.py  test_placeholder.py  test_secret_masking.py  test_shell.py  test_skill_examples.py  test_skills.py  test_tool_orphan_repair.py  test_tool_output.py  test_tool_output_management.py
(+397 files in other folders)
